--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,54 @@
+language: shell
 os: linux
 dist: focal
-language: shell
 
 env:
   global:
     DOCKER_BUILDKIT: "1"
     DOCKER_CLI_EXPERIMENTAL: "enabled"
 
-services:
-  - docker
+jobs:
+  include:
+    # build library
+    - language: python
+      python: 3.5
 
-before_install:
-  - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
-  - sudo service docker restart
-  - docker info
+      before_install:
+        - pip install poetry
 
-before_script:
-  - curl https://cli-assets.heroku.com/install.sh | sh
-  - docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
+      install:
+        - poetry install
 
-script:
-  - docker build -t registry.heroku.com/jsub-demo/web .
+      script:
+        - poetry run flake8 jsub tests
+        - poetry run python -m unittest discover
 
-deploy:
-  provider: script
-  script: docker push registry.heroku.com/jsub-demo/web &&
-    heroku container:release web --app jsub-demo
-  on:
-    branch: master
+      deploy:
+        - provider: script
+          script: poetry publish --username "$PYPI_USER" --password "$PYPI_PASS" --build
+          on:
+            tags: true
+
+    # deploy demo
+    - language: shell
+
+      services:
+        - docker
+      before_install:
+        - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
+        - sudo service docker restart
+        - docker info
+
+      before_script:
+        - curl https://cli-assets.heroku.com/install.sh | sh
+        - docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
+
+      script:
+        - docker build -t registry.heroku.com/jsub-demo/web demo/flask.Dockerfile
+
+      deploy:
+        provider: script
+        script: docker push registry.heroku.com/jsub-demo/web &&
+          heroku container:release web --app jsub-demo
+        on:
+          branch: master
