--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "jrsub"
 version = "0.1.2"
-description = "Python package for Warodai and Yarxi dictionaries"
+description = "Python package for working with Warodai and Yarxi dictionaries"
 license = "MIT"
 authors = ["Ekaterina Biryukova <kateabr@yandex.ru>"]
 homepage = "https://github.com/kateabr/jrsub"
