--- a/.travis.yml
+++ b/.travis.yml
@@ -30,26 +30,26 @@ jobs:
             tags: true
 
     # deploy demo
-    - language: shell
-
-      services:
-        - docker
-      before_install:
-        - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
-        - sudo service docker restart
-        - docker info
-
-      before_script:
-        - curl https://cli-assets.heroku.com/install.sh | sh
-        - docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
-
-      script:
-        - docker build -t registry.heroku.com/jsub-demo/web -f demo/flask.Dockerfile demo
-
-      deploy:
-        provider: script
-        script: docker push registry.heroku.com/jsub-demo/web &&
-          heroku container:release web --app jsub-demo
-        on:
-          condition: ($TRAVIS_BRANCH == "master" || -n $TRAVIS_TAG)
-          all_branches: true
+#    - language: shell
+#
+#      services:
+#        - docker
+#      before_install:
+#        - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
+#        - sudo service docker restart
+#        - docker info
+#
+#      before_script:
+#        - curl https://cli-assets.heroku.com/install.sh | sh
+#        - docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
+#
+#      script:
+#        - docker build -t registry.heroku.com/jsub-demo/web -f demo/flask.Dockerfile demo
+#
+#      deploy:
+#        provider: script
+#        script: docker push registry.heroku.com/jsub-demo/web &&
+#          heroku container:release web --app jsub-demo
+#        on:
+#          condition: ($TRAVIS_BRANCH == "master" || -n $TRAVIS_TAG)
+#          all_branches: true
