--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Backend Build
+name: Build
 
 on:
   workflow_dispatch:
@@ -17,11 +17,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.7
-      - uses: |
+      - run: |
           pip install poetry
           poetry install
 
-      - uses: |
+      - run: |
           poetry run flake8 jrsub tests
           poetry run python -m unittest discover
 
@@ -60,7 +60,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.7
-      - uses: |
+      - run: |
           pip install poetry
           poetry install
 
