--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,6 @@ python = "^3.7"
 jtran = "^0.2.13"
 tqdm = "^4.56.2"
 
-[tool.poetry.dev-dependencies]
-flake8 = "^3.7.9"
+
+[tool.poetry.group.dev.dependencies]
+black = "^22.12.0"
