--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,7 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     if: startsWith(github.event.ref, 'refs/tags/v')
+    needs: [ test ]
 
     steps:
       - uses: actions/checkout@v3
@@ -75,7 +76,7 @@ jobs:
           pip install poetry
           poetry install
 
-      - run: poetry publish --username "$PYPI_USER" --password "$PYPI_PASS" --build
+      - run: poetry publish --username "${{ secrets.PYPI_USER }}" --password "${{ secrets.PYPI_PASS }}" --build
 
 #  deploy:
 #    runs-on: ubuntu-latest
